# playground

./: Cargo.toml  README.md
deploy/freebsd/: README.md  playground_mcp
docs/: playground.md  playground_memory_architecture.md
notebooks/: compaction_lsm.rs
prompts/: system_prompt.md
scripts/: lima-session.yaml.tmpl  lima.yaml.tmpl
src/: archive_schema.rs  blob_refs.rs  cog_schema.rs  config.rs  config_schema.rs  context_schema.rs  diagnostics.rs  exec_schema.rs  exec_worker.rs  local_model.rs  main.rs  mcp.rs  mcp_http.rs  model_chat_schema.rs  model_worker.rs  oauth.rs  relations_schema.rs  repo_util.rs  schema.rs  time_util.rs
src/sandbox/: jail.rs  lima.rs  mod.rs  proc.rs
tests/: cli_smoke.rs
