[package]
name = "playground"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[features]
default = ["mcp-http"]
# Streamable-HTTP MCP transport (tokio + axum) with per-sandbox bearer-token
# auth. On by default; feature-gated so `--no-default-features` builds stay
# free of the async stack (the stdio MCP transport needs neither) — that's the
# FreeBSD server profile in deploy/freebsd/.
mcp-http = ["dep:tokio", "dep:axum"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "json", "tokio"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
ctrlc = "3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "net", "time"] }

[dev-dependencies]
# The mcp-http integration test acts as an HTTP client against the live server.
ureq = { version = "3", features = ["json", "rustls"] }
